Disable sniffing if es.nodes.wan.only is true.